services/apps/pocket/resources/stateful-set.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: pocket
  namespace: pocket
spec:
  selector:
    matchLabels:
      app: pocket
  serviceName: pocket
  replicas: 1
  template:
    metadata:
      labels:
        app: pocket
    spec:
      terminationGracePeriodSeconds: 30
      containers:
        - name: pocket-id
          image: ghcr.io/pocket-id/pocket-id:v2.4
          ports:
            - name: http
              containerPort: 1411
              protocol: TCP
          volumeMounts:
            - name: pocket-data
              mountPath: /app/data
  volumeClaimTemplates:
    - kind: PersistentVolumeClaim
      apiVersion: v1
      metadata:
        name: pocket-data
        labels:
          app: pocket
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 10Gi
        volumeMode: Filesystem
