services/apps/pocket/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pocket
  namespace: pocket
spec:
  ports:
    - port: 80
      targetPort: 1411
  selector:
    app: pocket
