services/apps/pocket/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pocket
  namespace: pocket
  annotations:
    cert-manager.io/issuer: cf-issuer
    cert-manager.io/issuer-kind: ClusterOriginIssuer
    cert-manager.io/issuer-group: cert-manager.k8s.cloudflare.com
spec:
  rules:
    - host: id.yyuemii.co
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pocket
                port:
                  number: 80
  tls:
    - hosts:
        - id.yyuemii.co
      secretName: cert-pocket-ingress
